# Do_it_All

./: README.md  pyproject.toml
doitall/: demo.py  gradio_sidebar.py  gradio_theme.py  main.py  prompts.py
doitall/addons/: chat_style.py  file_handler.py  html_screenshot.py  web_search.py
