[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Do_it_All"
version = "0.0.3" 
description = "A basic AI Agent system for Python."
keywords = ["python", "package", "doitall", "ai", "agent"]
authors = [
  { name="broadfield-dev" }
]
dependencies = [
  "huggingface-hub==0.27.0",
  "beautifulsoup4==4.12.3",
  "requests==2.32.3",
  "lxml==5.3.0",
  "gradio>=5.8.0",
  "langchain"==0.3.14,
  "langchain-community"==0.3.14,
  "langchain-huggingface"==0.1.2,
  "pypdf"==5.1.0,
  "chromadb"==0.4.15,
  "ollama"==0.4.5,
  "openai"==1.59.6,
  "google-genai"==0.5.0,
  "tiktoken"==0.8.0,
  "git+https://github.com/broadfield-dev/chromaviz.git",
   
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/broadfield-dev/Do_it_all"
"Issues" = "https://github.com/broadfield-dev/Do_it_all/issues"

[tool.setuptools.packages.find]
where = ["doitall"]
